--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -129,26 +129,22 @@ We evaluate the cross-cultural frequency in the functions and qualities of leade
 Here we draw on the same database of 1212 ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the electronic Human Relations Area Files (eHRAF) database [@naroll_proposed_1967]. The leadershipdata database was designed to capture a wide sample of the ethnographic record of leadership. For the current study, two authors coded each paragraph for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. 
 
 
-The operationalized qualities and functions (See Table \@ref(tab:qualfuncvars)) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, while also creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Table \@ref(tab:qualfuncvars). ZG then followed the same process of coding the entire sample of 1212 text records for the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` operationalized variables. DISCUSS IRR. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository (a data frame named leader_text2). 
+The operationalized qualities and functions (See Table \@ref(tab:qualfuncvars)) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, while also creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Table \@ref(tab:qualfuncvars). ZG then followed the same process of coding the entire sample of 1212 text records for the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` operationalized variables. DISCUSS IRR. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository (a data frame named leader_text2).
 
-Table: (\#tab:qualfuncvars) Operational definitions for coded leader qualities and functions. 
-
-```{r qualfuncvars, echo=FALSE, message=F, warning=FALSE}
+```{r qualfuncvars, echo=FALSE, message=F, warning=FALSE, eval=F}
 library(readr)
 qual_func_var_tab<-read_csv('func_qual_definitions.csv', na = 'NA')
 library(knitr)
-kable(qual_func_var_tab)
+kable(qual_func_var_tab, caption = "Operational definitions for coded leader qualities and functions.")
 ```
 
-Coding operationalizations of the costs and benefits of leadership were developed *a priori* based on our reading of the evolutionary theoretical literature from anthropology and biology. For both followers and leaders, we code if there is evidence of costs or benefits in the following categories: social status, reduced or increased risk of harm or conflict, social services, territory, mating, fitness, food resources, material resources, and other miscellaneous costs or benefits not captured by these categories. See Table \@ref(tab:costbenefitvars). 
+Coding operationalizations of the costs and benefits of leadership were developed *a priori* based on our reading of the evolutionary theoretical literature from anthropology and biology. For both followers and leaders, we code if there is evidence of costs or benefits in the following categories: social status, reduced or increased risk of harm or conflict, social services, territory, mating, fitness, food resources, material resources, and other miscellaneous costs or benefits not captured by these categories. See Table \@ref(tab:costbenefitvars).
 
-Table: (\#tab:costbenefitvars) Operational definitions for coded benefits and costs for leaders and followers.
-
-```{r costbenefitvars, echo=FALSE, message=F, warning=FALSE, }
+```{r costbenefitvars, echo=FALSE, message=F, warning=FALSE, eval=F}
 library(readr)
 cost_benefit_vars_tab<-read_csv('costs_benefits.csv', na = 'NA')
 library(knitr)
-kable(cost_benefit_vars_tab)
+kable(cost_benefit_vars_tab, caption = "Operational definitions for coded benefits and costs for leaders and followers.")
 ```
 
 For additional details on ethnographic sampling and creating of the leadershipdata package see CITE. 
@@ -236,13 +232,13 @@ knitr::include_graphics("Figures/m_pvclust_fun.final.png")
 
 ## Principle components analyses
 
-A logistic PCA on the `r length(quality_vars)` coded leader quality variables, with rank $k=`r dim(logpca_model_qualities$U)[2]`$ optimized by cross-validation, explained `r signif(logpca_model_qualities$prop_deviance_expl, 3)*100`% of the deviance. We draw on the first of the three leader quality components for interpretation and additional analyses and identify this component as a *Prestige vs. Dominance* measure. Low values on Leader qualities PC 1 (Prestige vs. Dominance) are strongly associated with the variables *Experienced/accomplished* and *Knowledgeable/intelligence* and moderately associated with *Oratory skill* and *Innovative*. High values are strongly associated with *Polygnous* and *Coercive authority* and moderately associated with *Many children* and *High quality spouse*. Therefore, the "dominance" side of the *Prestige vs. Dominance* component is also closely liked to reproduction. Measures of physical formidability and aggressiveness are also moderately associated with the "dominance" side of this component. See Figure \@ref(fig:qualitiesPCplot).  
+A logistic PCA on the `r length(quality_vars)` coded leader quality variables, with rank $k=`r dim(logpca_model_qualities$U)[2]`$ optimized by cross-validation, explained `r signif(logpca_model_qualities$prop_deviance_expl, 3)*100`% of the deviance. We draw on the first two leader quality components for interpretation and additional analyses and identify this component as a *Prestige vs. Dominance* measure. Low values on Leader qualities PC 1 (Prestige vs. Dominance) are strongly associated with the variables *Experienced/accomplished* and *Knowledgeable/intelligence* and moderately associated with *Oratory skill* and *Innovative*. High values are strongly associated with *Polygnous* and *Coercive authority* and moderately associated with *Many children* and *High quality spouse*. Therefore, the "dominance" side of the *Prestige vs. Dominance* component is also closely liked to reproduction. Measures of physical formidability and aggressiveness are also moderately associated with the "dominance" side of this component. See Figure \@ref(fig:qualitiesPCplot).  
 
 ```{r qualitiesPCplot, fig.width=15, fig.height=10, fig.cap="Logistic PCA loadings of coded leader qualitiy variables on the first two components."}
 logisticPCA_loadings_plot(logpca_model_qualities, data = pca_data_qualities2)
 ```
 
-Similarly, A logistic PCA on the `r length(quality_vars)` coded leader quality variables, with rank $k=`r dim(logpca_model_functions$U)[2]`$ optimized by cross-validation, `r signif(logpca_model_functions$prop_deviance_expl, 3)*100`% of the deviance. The first Leader functions component distinguishes between interpersonal mediation functions and group organizational and social functions, we define as a *Mediation vs. Organization* measures. Low values on Leader functions PC 1 (Mediation vs. Organization) are strongly associated with the variables *Resolve conflict* and *Provide counsel/direction* and moderately associated with *Political appointments* and *Punishment*, whereas high values are strongly associated with *Social functions* and *Organize cooperation* and moderately associated with *Ritual functions*. See Figure \@ref(fig:functionsPCplot).
+Similarly, A logistic PCA on the `r length(function_vars)` coded leader function variables, with rank $k=`r dim(logpca_model_functions$U)[2]`$ optimized by cross-validation, `r signif(logpca_model_functions$prop_deviance_expl, 3)*100`% of the deviance. The first Leader functions component distinguishes between interpersonal mediation functions and group organizational and social functions, we define as a *Mediation vs. Organization* measures. Low values on Leader functions PC 1 (Mediation vs. Organization) are strongly associated with the variables *Resolve conflict* and *Provide counsel/direction* and moderately associated with *Political appointments* and *Punishment*, whereas high values are strongly associated with *Social functions* and *Organize cooperation* and moderately associated with *Ritual functions*. See Figure \@ref(fig:functionsPCplot).
 
 
 ```{r functionsPCplot, fig.width=15, fig.height=10, fig.cap="Logistic PCA loadings of coded leader function variables on the first two components."}
